test: switching get(0) to getfirst()